--- a/newsclient/Articles/Articles.storyboard
+++ b/newsclient/Articles/Articles.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="68R-x5-Y7v">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oOZ-3v-f1y">
-                                <rect key="frame" x="0.0" y="192" width="375" height="475"/>
+                                <rect key="frame" x="0.0" y="196" width="375" height="471"/>
                                 <connections>
                                     <segue destination="564-ta-nAC" kind="embed" id="xUg-Vr-Y4e"/>
                                 </connections>
@@ -34,10 +34,10 @@
                                 </connections>
                             </containerView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" red="0.86274509803921573" green="0.86274509803921573" blue="0.78431372549019607" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="BZ7-FJ-jZz" firstAttribute="top" secondItem="Gez-2h-WDD" secondAttribute="top" id="KiS-qO-Hrc"/>
-                            <constraint firstItem="oOZ-3v-f1y" firstAttribute="top" secondItem="BZ7-FJ-jZz" secondAttribute="bottom" id="PmT-OP-rpc"/>
+                            <constraint firstItem="oOZ-3v-f1y" firstAttribute="top" secondItem="BZ7-FJ-jZz" secondAttribute="bottom" constant="4" id="PmT-OP-rpc"/>
                             <constraint firstItem="BZ7-FJ-jZz" firstAttribute="leading" secondItem="Gez-2h-WDD" secondAttribute="leading" id="RsO-OY-RTh"/>
                             <constraint firstItem="oOZ-3v-f1y" firstAttribute="trailing" secondItem="Gez-2h-WDD" secondAttribute="trailing" id="Z4x-UA-Kd3"/>
                             <constraint firstItem="oOZ-3v-f1y" firstAttribute="bottom" secondItem="Gez-2h-WDD" secondAttribute="bottom" id="h07-ac-duw"/>
@@ -52,14 +52,16 @@
             </objects>
             <point key="canvasLocation" x="604" y="160.56971514242881"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Base Navigation Controller-->
         <scene sceneID="LHw-Nu-LPe">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="68R-x5-Y7v" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="68R-x5-Y7v" customClass="BaseNavigationController" customModule="newsclient" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" id="4a8-YJ-Txo">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="barTintColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -75,12 +77,12 @@
             <objects>
                 <viewController storyboardIdentifier="PastArticlesViewController" id="564-ta-nAC" customClass="PastArticlesViewController" customModule="newsclient" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Zl6-gK-yb1">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="475"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="471"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="3JX-bg-T7i">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="475"/>
-                                <color key="backgroundColor" red="0.0" green="0.83529411760000005" blue="0.50980392159999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="3JX-bg-T7i">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="471"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="bbX-oJ-ksG">
                                     <size key="itemSize" width="50" height="50"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -114,23 +116,30 @@
             <objects>
                 <viewController storyboardIdentifier="DetailsViewController" id="ZcT-Zt-jGp" customClass="DetailsViewController" customModule="newsclient" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Tvo-4g-3in">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="475"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="471"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="1B8-G7-11P">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="475"/>
+                            <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QgZ-5F-gbF">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="471"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            </tableView>
+                                <wkWebViewConfiguration key="configuration">
+                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
+                                    <wkPreferences key="preferences"/>
+                                </wkWebViewConfiguration>
+                            </wkWebView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="Fdq-ym-6Lk" firstAttribute="bottom" secondItem="1B8-G7-11P" secondAttribute="bottom" id="P9e-Au-21U"/>
-                            <constraint firstItem="1B8-G7-11P" firstAttribute="top" secondItem="Fdq-ym-6Lk" secondAttribute="top" id="TXt-hc-qPB"/>
-                            <constraint firstItem="Fdq-ym-6Lk" firstAttribute="trailing" secondItem="1B8-G7-11P" secondAttribute="trailing" id="VTY-0L-NYU"/>
-                            <constraint firstItem="1B8-G7-11P" firstAttribute="leading" secondItem="Tvo-4g-3in" secondAttribute="leading" id="rqz-R9-JsU"/>
+                            <constraint firstItem="Fdq-ym-6Lk" firstAttribute="bottom" secondItem="QgZ-5F-gbF" secondAttribute="bottom" id="Gq9-VR-2Sd"/>
+                            <constraint firstItem="QgZ-5F-gbF" firstAttribute="top" secondItem="Fdq-ym-6Lk" secondAttribute="top" id="aau-g5-ts0"/>
+                            <constraint firstItem="Fdq-ym-6Lk" firstAttribute="trailing" secondItem="QgZ-5F-gbF" secondAttribute="trailing" id="r0Q-OH-IsG"/>
+                            <constraint firstItem="QgZ-5F-gbF" firstAttribute="leading" secondItem="Fdq-ym-6Lk" secondAttribute="leading" id="vLS-6u-gAO"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Fdq-ym-6Lk"/>
                     </view>
+                    <connections>
+                        <outlet property="webView" destination="QgZ-5F-gbF" id="Ii6-3J-Ywd"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Cno-fA-ImM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -144,9 +153,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="128"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Tip-G3-7Ex">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceHorizontal="YES" pagingEnabled="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Tip-G3-7Ex">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="128"/>
-                                <color key="backgroundColor" red="0.0" green="0.83529411760000005" blue="0.50980392159999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="oPI-LD-18v">
                                     <size key="itemSize" width="50" height="50"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
